--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "symfony/framework-bundle": "~2.7|~3.0",
         "symfony/console": "~2.7|~3.0",
         "symfony/process": "~2.7|~3.0",
-        "symfony/yaml": "~2.7|~3.0"
+        "symfony/yaml": "~2.7|~3.0",
+        "symfony/validator": "~2.7|~3.1"
     },
     "require-dev": {
         "symfony/doctrine-bridge": "~2.7|~3.0",
